objects/Product_Category__c.object
<CustomObject><fields>
        <fullName>Archive__c</fullName>
        <label>Archive</label>
        <length>2</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Category_Code__c</fullName>
        <externalId>true</externalId>
        <label>Category Code</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Category_Cost_History_Index__c</fullName>
        <label>Category Cost History Index</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Cost_Date__c</fullName>
        <label>Cost Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <picklist>
            <picklistValues>
                <fullName>QUOTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>z</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Range1__c</fullName>
        <label>Range1</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Range2__c</fullName>
        <label>Range2</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Range3__c</fullName>
        <label>Range3</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Rate1__c</fullName>
        <label>Rate1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Rate2__c</fullName>
        <label>Rate2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Rate3__c</fullName>
        <label>Rate3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Spare2__c</fullName>
        <label>Spare2</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NQT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Synchro_Index__c</fullName>
        <externalId>true</externalId>
        <label>Synchro Index</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Weight_UOM__c</fullName>
        <label>Weight UOM</label>
        <picklist>
            <picklistValues>
                <fullName>KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metre</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Product Category</label><nameField>
        <label>Product Category Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Product Categories</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category_Code__c</columns>
        <columns>Synchro_Index__c</columns>
        <columns>Description__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>